--- a/config.yaml
+++ b/config.yaml
@@ -2,29 +2,25 @@ tracepoints:
   - name: sock:inet_sock_set_state
     fields: fields_01
     tcp_state: TCP_CLOSE
-    pollingInterval: 100
+    sample: 1
     inet: [4,6]
     geo: enable
-    output: 
-      type: jsonl
-      filename: /tmp/myfile.jsonl
+    output: jsonl01
 
-  # - name: tcp:tcp_retransmit_skb
-  #   fields: fields_01
-  #   tcp_state: TCP_CLOSE
-  #   pollingInterval: 100
-  #   inet: [4]
-  #   geo: enable
-  #   output: 
-  #     type: jsonl
-  #     filename: /tmp/myfile.jsonl    
+  - name: tcp:tcp_retransmit_skb
+    fields: fields_01
+    tcp_state: TCP_CLOSE
+    inet: [4]
+    geo: enable
+    output: file_01
       
 fields:
   fields_01:
+     - name: PID
      - name: Task
+     - name: NumSAcks
      - name: SRTT
-       func: ''
-       filter: ''
+     - name: RTT
      - name: TotalRetrans
      - name: AdvMSS
      - name: BytesReceived 
@@ -32,4 +28,32 @@ fields:
      - name: SegsOut
      - name: SAddr
      - name: DAddr
+     - name: DPort
+     - name: LPort
+
+  fields_02:
      - name: PID
+     - name: Task
+     - name: SRTT
+
+output:
+  jsonl01:
+    type: console
+    config:
+      filename: /tmp/file.jsonl
+
+  console:
+    type: console
+    config:
+      output: stdout
+      
+  kafka_01:
+    type: kafka
+    config: 
+      endpoints: 127.0.0.1:9091
+      serialization: protobuf
+    
+  file_01:
+    type: console
+    config:
+      filename: /tmp/myjson  
