--- a/.github/workflows/tcpdog.yml
+++ b/.github/workflows/tcpdog.yml
@@ -29,8 +29,8 @@ jobs:
       
       - name: Install BCC
         run: |
-          curl -sL https://github.com/mehrdadrad/tcpdog/releases/download/v1.0.0/libbcc-0.18.0-x86_64.deb
-          sudo dpkg -i libbcc-0.18.0-x86_64.deb
+          curl -sL https://github.com/mehrdadrad/tcpdog/releases/download/v1.0.0/libbcc-0.18.0-x86_64.deb --output libbcc.deb
+          sudo dpkg -i libbcc.deb
 
       - name: Build client
         run: |
