--- a/.github/workflows/tcpdog.yml
+++ b/.github/workflows/tcpdog.yml
@@ -43,7 +43,7 @@ jobs:
           go build
 
       - name: Test
-        run: sudo go test ./... -timeout 5m -coverprofile=profile.cov
+        run: go test ./... -timeout 5m -coverprofile=profile.cov
 
       - name: Coveralls
         uses: shogo82148/actions-goveralls@v1
